# nsu_pr

./: .gitignore  LICENSE.md  README.md
algebra_exam1/: algebra_answ.lyx  angem_answ.lyx  numb_th_answ.lyx
dd_lab1_carhl/: carhighlight.rpt  carhighlight.scf  carhighlight.tdf
dd_lab2_adder/: adder.rpt  adder.scf  adder.tdf  adder1.rpt  adder1.scf  adder8.rpt  adder8.tdf
dd_lab2_adder_vs/: adder1.inc  adder1.tdf  adder2.inc  adder2.rpt  adder2.scf  adder2.tdf  plus2.inc  plus2.rpt  plus2.scf  plus2.tdf  test.rpt  test.scf  test.tdf
dd_lab3_comparator/: comp2.inc  comp2.rpt  comp2.scf  comp2.tdf  comp4.inc  comp4.rpt  comp4.scf  comp4.tdf  comp8.rpt  comp8.scf  comp8.tdf
dd_lab4_trigger/: d_ff.inc  d_ff.rpt  d_ff.scf  d_ff.tdf  d_latch.inc  d_latch.rpt  d_latch.scf  d_latch.tdf  jk_ff.rpt  jk_ff.scf  jk_ff.tdf  sr_ff.rpt  sr_ff.scf  sr_ff.tdf
home1/: CMakeLists.txt  a.out  main.c
lab1/: CMakeLists.txt  in.txt  out.txt  solution.c  solution.h
lab1_dijkstra/: in.txt  out.txt
lab2/: CMakeLists.txt  in.txt  solution.c  solution.h
lab2_kruskal/: CMakeLists.txt  solution.h
lab3/: in.txt  out.txt  solution.c  solution.h
lab3_prim/: CMakeLists.txt  solution.c  solution.h
lab3_prim_adjlist/: CMakeLists.txt  solution.c  solution.h
lab4/: CMakeLists.txt  solution.c  solution.h
lab4_topsort/: CMakeLists.txt  solution.c  solution.h
lab5/: CMakeLists.txt  solution.h
lab5_huffman/: CMakeLists.txt  binary_io.c  binary_io.h  errors.h  huffman.c  huffman.h  in.txt  list.c  list.h  main.c  main.h  pqueue.c  pqueue.h  solution.c  solution.h
lab6/: CMakeLists.txt  in.txt  out.txt  solution.c  solution.h
math_analysis_colloquium_13102016/: terms.lyx  terms.tex
matlog_exam1/: answers.lyx
pr_lab1_dijkstra/: LICENSE  for_tcc.c  in.txt  out.txt  solution.c  solution.h
pr_lab2_kruskal/: CMakeLists.txt  for_tcc.c  in.txt  solution.c  solution.h
pr_lab3_prim/: CMakeLists.txt  for_tcc.c  out.txt  solution.c  solution.h
pr_lab3_prim_adjlist/: in.txt
pr_lab4_topsort/: out.txt  solution.c  solution.h
wireworld/: 123  456  main.c
(+27 files in other folders)
